--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,8 @@
 {
   "arrowParens": "always",
   "singleQuote": true,
-  "printWidth": 120,
-  "semi": true
+  "printWidth": 100,
+  "semi": true,
+  "useTabs": false,
+  "tabWidth": 2
 }
